--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,27 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+  <link rel="manifest" href="assets/site.webmanifest">
+  <link rel="mask-icon" href="assets/img/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#1d21bf">
+  <meta name="theme-color" content="#ffffff">
+
+  <meta property="og:image:width" content="279">
+  <meta property="og:image:height" content="279">
+  <meta property="og:description" content="A developer preview of the machine-learning-powered ingredient parser API. Built to power the best food apps online.">
+  <meta property="og:title" content="Ingredient Parser">
+  <meta property="og:url" content="https://ingredientparser.com">
+  <meta property="og:image" content="https://ingredientparser.com/assets/img/og-image.jpg">
+
+  <!-- Twitter properties -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@deliberatecoder" />
+  <meta name="twitter:title" content="Ingredient Parser">
+  <meta name="twitter:description" content="A developer preview of the machine-learning-powered ingredient parser API. Built to power the best food apps online.">
+  <meta name="twitter:image" content="https://ingredientparser.com/assets/img/og-image.jpg">
 </head>
 <body>
   <app-root></app-root>
