Broken syntax highlighting

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
   <meta name="twitter:title" content="Ingredient Parser">
   <meta name="twitter:description" content="A developer preview of the machine-learning-powered ingredient parser API. Built to power the best food apps online.">
   <meta name="twitter:image" content="https://ingredientparser.com/assets/img/og-image.jpg">
+
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/highlight.min.js"></script>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/atom-one-dark.min.css">
 </head>
 <body>
   <app-root></app-root>
